# md-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 0001_create_schema.sql  0002_seed_data.sql
src/: errors.rs  lib.rs  main.rs  state.rs
src/dtos/: mod.rs
src/dtos/competitions/: input.rs  output.rs
src/dtos/filters/: input.rs  output.rs
src/dtos/institutions/: input.rs  output.rs
src/dtos/organizers/: input.rs  output.rs
src/handlers/: mod.rs  query.rs
src/handlers/competitions/: get_location_stats.rs  get_options.rs  get_results_by_year.rs  get_stats_by_year.rs  get_structure_by_year.rs  get_structures.rs  mod.rs
src/handlers/events/: get_location_stats.rs  get_stats_by_year.rs
src/handlers/institutions/: get_event_performance_over_time.rs  get_options.rs  get_structures.rs  mod.rs
src/handlers/organizers/: get_options.rs  get_structure_by_year.rs  get_structures.rs  mod.rs
src/handlers/teams/: get_options.rs  get_structure_by_year.rs  get_structures.rs  mod.rs
src/models/: author.rs  competition.rs  event.rs  institution.rs  location.rs  member.rs  mod.rs  organizer.rs  problem.rs  submission.rs  team.rs
src/repositories/: competition_repository.rs  event_repository.rs  institution_repository.rs  mod.rs  organizer_repository.rs  registry.rs  team_repository.rs
src/repositories/competition/: mod.rs  options.rs  results.rs  stats.rs  structures.rs  (+1 more)
src/routes/: competitions.rs  events.rs  institutions.rs  mod.rs  organizers.rs  teams.rs
src/services/: mod.rs
src/shared/: mod.rs  serde.rs  types.rs
(+77 files in other folders)
