[package]
name = "md_backend"
version = "0.1.0"
authors = ["Henrique Morcelles Salum <morcelleshenrique@gmail.com>"]
edition = "2024"
repository = "https://github.com/gnramos/md-backend"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1.0", default-features = false }