[package]
name = "md_backend"
version = "0.1.0"
authors = ["Henrique Morcelles Salum <morcelleshenrique@gmail.com>"]
edition = "2024"
repository = "https://github.com/gnramos/md-backend"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1.0", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
dotenvy = "0.15"
thiserror = "2.0.18"
indexmap = "2"

[dev-dependencies]
mockall = "0.12"
async-trait = "0.1"